syntax = "proto3";
package nl.svsticky.chroma;

message AccessResponse {
  bool admin = 1;
  optional bool hasRequestedScope = 2;
  optional string allScopes = 3;
}